--- a/src/index.css
+++ b/src/index.css
@@ -81,10 +81,10 @@ h4 {
   margin-bottom: 0.75rem;
 }
 h1 {
-  font-size: 2.5rem;
+  font-size: 18px;
 }
 h2 {
-  font-size: 2rem;
+  font-size: 18px;
 }
 h3 {
   font-size: 1.25rem;
@@ -97,15 +97,7 @@ p {
   color: var(--clr-grey-3);
 }
 @media screen and (min-width: 800px) {
-  h1 {
-    font-size: 3rem;
-  }
-  h2 {
-    font-size: 2.5rem;
-  }
-  h3 {
-    font-size: 1.75rem;
-  }
+  
   h4 {
     font-size: 1rem;
   }
@@ -134,6 +126,13 @@ p {
   }
 }
 
+
+@media screen and (max-width: 600px) {
+  .next-question,
+.close-btn,
+.submit-btn {font-size: 12px;
+}
+}
 /*
 =============== 
 Quiz
@@ -181,6 +180,9 @@ main {
   .answer-btn {
     max-width: 60%;
   }
+h2 {
+    font-size: 1.5rem;
+  }
 }
 .answer-btn:hover {
   background: var(--clr-primary-5);
@@ -208,7 +210,7 @@ main {
   text-transform: capitalize;
   font-weight: 700;
   letter-spacing: var(--spacing);
-  font-size: 1rem;
+
   background: blue;
   color: var(--clr-white);
   transition: var(--transition);
